--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <h1>Conmebol
                         Copa America
                         2021</h1>
-                    <a href="" target="_blank"> Watch Live<span><i class="fas fa-arrow-alt-circle-right"></i></span></a>
+                    <a href="https://www.livesoccertv.com/" target="_blank"> Watch Live<span><i
+                                class="fas fa-arrow-alt-circle-right"></i></span></a>
                 </div>
                 <div>
                     <img src="images/banner.png" class="banner-image" alt="">
@@ -123,23 +124,25 @@
                 </div>
             </div>
         </section>
-
-        <!-- Footer is here -->
-        <footer class="footer">
-            <div>
-                <img src="images/Logo.png" class="logo" alt="">
-            </div>
-            <div class="icons">
-                <a href="" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                <a href="" target="_blank"><i class="fab fa-dribbble-square"></i></a>
-                <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                <a href="" target="_blank"><i class="fab fa-youtube-square"></i></a>
-            </div>
-            <div>
-                <p>Copyright © 2022 Football</p>
-            </div>
-        </footer>
     </main>
+    <!-- Footer is here -->
+    <footer class="footer">
+        <div>
+            <img src="images/Logo.png" class="logo" alt="">
+        </div>
+        <div class="icons">
+            <a href="https://karima-aktari.github.io/2nd-Assignment-football-responsive/" target="_blank"><i
+                    class="fab fa-instagram-square"></i></a>
+            <a href="https://blog.feedspot.com/football_news_websites/" target="_blank"><i
+                    class="fab fa-dribbble-square"></i></a>
+            <a href="https://rapidapi.com/blog/soccer-football-websites/" target="_blank"><i
+                    class="fab fa-twitter-square"></i></a>
+            <a href="https://www.livesoccertv.com/" target="_blank"><i class="fab fa-youtube-square"></i></a>
+        </div>
+        <div>
+            <p>Copyright © 2022 Football</p>
+        </div>
+    </footer>
 </body>
 
 
